[gd_scene load_steps=2 format=2]

[ext_resource path="res://SCRIPTS/UI/LEVEL_SELECTION.gd" type="Script" id=1]


[node name="LEVEL_SELECTION" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_top = 1.0
margin_right = -2.0
margin_bottom = 1.0

[node name="Label" type="Label" parent="."]
margin_left = 460.0
margin_top = 94.0
margin_right = 569.0
margin_bottom = 108.0
text = "LEVEL SELECTION"

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="VOLTAR" type="Button" parent="Control"]
margin_left = 30.0
margin_top = 30.0
margin_right = 100.0
margin_bottom = 50.0
text = "VOLTAR"
flat = true

[node name="Button" type="Button" parent="Control"]
margin_left = 170.0
margin_top = 210.0
margin_right = 240.0
margin_bottom = 230.0
text = "LEVEL_01"
flat = true

[node name="Button2" type="Button" parent="Control"]
margin_left = 320.0
margin_top = 210.0
margin_right = 390.0
margin_bottom = 230.0
text = "LEVEL_02"
flat = true

[node name="Button3" type="Button" parent="Control"]
margin_left = 470.0
margin_top = 210.0
margin_right = 540.0
margin_bottom = 230.0
text = "LEVEL_03"
flat = true

[node name="Button4" type="Button" parent="Control"]
margin_left = 600.0
margin_top = 210.0
margin_right = 670.0
margin_bottom = 230.0
text = "LEVEL_04"
flat = true

[node name="Button5" type="Button" parent="Control"]
margin_left = 750.0
margin_top = 210.0
margin_right = 820.0
margin_bottom = 230.0
text = "LEVEL_05"
flat = true
[connection signal="pressed" from="Control/VOLTAR" to="Control" method="_on_VOLTAR_pressed"]
[connection signal="pressed" from="Control/Button" to="Control" method="_on_Button_pressed"]
[connection signal="pressed" from="Control/Button2" to="Control" method="_on_Button2_pressed"]
[connection signal="pressed" from="Control/Button3" to="Control" method="_on_Button3_pressed"]
[connection signal="pressed" from="Control/Button4" to="Control" method="_on_Button4_pressed"]
[connection signal="pressed" from="Control/Button5" to="Control" method="_on_Button5_pressed"]
